# AuthWarden

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
authwarden/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
authwarden/src/: config.rs  errors.rs  main.rs
authwarden/src/db/: audit_logs.rs  sessions.rs  users.rs
authwarden/src/handlers/: account.rs  auth.rs  mod.rs  sessions.rs
authwarden/src/models/: audit_log.rs  auth.rs  mod.rs  session.rs  user.rs
authwarden/src/services/: mod.rs  password.rs  refresh_token.rs  token.rs
k8s/: README.md  configmap.yaml  deployment.yaml  ingress-tls.md  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
migrations/: 001_create_users.sql  002_create_refresh_sessions.sql  003_create_audit_logs.sql
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
src/db/: audit_logs.rs  mod.rs  redis.rs  sessions.rs  users.rs
src/extractors/: auth_user.rs
src/handlers/: auth.rs  health.rs  mod.rs  pages.rs  sessions.rs
src/models/: audit_log.rs  auth.rs  session.rs  user.rs
src/services/: password.rs
tests/: auth_flow.rs
