[package]
name = "authwarden"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "macros", "migrate"] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = {version = "0.5.3" }
